Scaffolded DbContext: added GegaGamezContext and entities classes

--- a/GegaGamez.DAL/GegaGamez.DAL.csproj
+++ b/GegaGamez.DAL/GegaGamez.DAL.csproj
@@ -18,4 +18,11 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Repositories\EFCore\" />
+    <Folder Include="Services\EFCore\" />
+  </ItemGroup>
+
 </Project>
