--- a/GegaGamez.BLL/GegaGamez.BLL.csproj
+++ b/GegaGamez.BLL/GegaGamez.BLL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GegaGamez.DAL\GegaGamez.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
