added business logic classes (still working on it...)

--- a/GegaGamez.BLL/GegaGamez.BLL.csproj
+++ b/GegaGamez.BLL/GegaGamez.BLL.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\GegaGamez.DAL\GegaGamez.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Searchers\" />
+  </ItemGroup>
+
 </Project>
