--- a/GegaGamez.BLL/GegaGamez.BLL.csproj
+++ b/GegaGamez.BLL/GegaGamez.BLL.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GegaGamez.DAL\GegaGamez.DAL.csproj" />
+    <ProjectReference Include="..\GegaGamez.Shared\GegaGamez.Shared.csproj" />
   </ItemGroup>
 
 </Project>
