Added business logic project (#27)
* created basic domain model classes (need to think it through)

* added diagrams

* added business logic classes

* Added business logic  models

* added Validation logic

* added validation mechanism
- ValidationManager static class
- ValidatableModel abstract class

* added business logic classes

* Configured automapping

--- a/GegaGamez.BLL/GegaGamez.BLL.csproj
+++ b/GegaGamez.BLL/GegaGamez.BLL.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GegaGamez.DAL\GegaGamez.DAL.csproj" />
+    <ProjectReference Include="..\GegaGamez.Shared\GegaGamez.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
