--- a/GegaGamez.WebUI/appsettings.json
+++ b/GegaGamez.WebUI/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=GegaGamez;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "SecurityKey": "And away boys away... Rio",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
