--- a/GegaGamez.Tests/GegaGamez.Tests.csproj
+++ b/GegaGamez.Tests/GegaGamez.Tests.csproj
@@ -20,4 +20,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GegaGamez.DAL\GegaGamez.DAL.csproj" />
+    <ProjectReference Include="..\GegaGamez.Shared\GegaGamez.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
