--- a/GegaGamez.WebUI/appsettings.json
+++ b/GegaGamez.WebUI/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=GegaGamez;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "GegaGamezDev": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=GegaGamez;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-  "SecurityKey": "And away boys away... Rio",
+  "SecurityKey": "My super secret key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
