--- a/GegaGamez.Tests/GegaGamez.Tests.csproj
+++ b/GegaGamez.Tests/GegaGamez.Tests.csproj
@@ -9,18 +9,20 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Moq" Version="4.18.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="3.1.0">
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GegaGamez.BLL\GegaGamez.BLL.csproj" />
     <ProjectReference Include="..\GegaGamez.DAL\GegaGamez.DAL.csproj" />
     <ProjectReference Include="..\GegaGamez.Shared\GegaGamez.Shared.csproj" />
   </ItemGroup>
