Added exception logging

--- a/GegaGamez.WebUI/appsettings.Development.json
+++ b/GegaGamez.WebUI/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "GegaGamezDev": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=GegaGamez;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "SecurityKey": "My super secret key",
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Trace",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   }
 }
